--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,18 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
-version: 2.1
-# Use a package of configuration called an orb.
-orbs:
-  # Declare a dependency on the welcome-orb
-  welcome: circleci/welcome-orb@0.4.1
-# Orchestrate or schedule a set of jobs
-workflows:
-  # Name the workflow "welcome"
-  welcome:
-    # Run the welcome/run job in its own container
-    jobs:
-      - welcome/run
+machine:
+  environment:
+    ANDROID_HOME: /home/ubuntu/android
+    GRADLE_OPTS: '-Dorg.gradle.jvmargs="-Xmx1536M -XX:MaxPermSize=512M -XX:ReservedCodeCacheSize=512M"'
+
+  java:
+      version: oraclejdk8
+
+general:
+  artifacts:
+    - /home/ubuntu/HabrCiCdCat/app/build/outputs/apk/
+
+dependencies:
+  cache_directories:
+    - ~/.android
+    - ~/android
+  override:
+    - (source scripts/environmentSetup.sh && getAndroidSDK)
