--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,30 @@
-machine:
-  environment:
-    ANDROID_HOME: /home/ubuntu/android
-    GRADLE_OPTS: '-Dorg.gradle.jvmargs="-Xmx1536M -XX:MaxPermSize=512M -XX:ReservedCodeCacheSize=512M"'
-
-  java:
-      version: oraclejdk8
-
-general:
-  artifacts:
-    - /home/ubuntu/HabrCiCdCat/app/build/outputs/apk/
-
-dependencies:
-  cache_directories:
-    - ~/.android
-    - ~/android
-  override:
-    - (source scripts/environmentSetup.sh && getAndroidSDK)
+version: 2
+jobs:
+  build:
+    working_directory: ~/code
+    docker:
+      - image: circleci/android:api-25-alpha
+    environment:
+      JVM_OPTS: -Xmx3200m
+    steps:
+      - checkout
+      - restore_cache:
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+#      - run:
+#         name: Chmod permissions #if permission for Gradlew Dependencies fail, use this. 
+#         command: sudo chmod +x ./gradlew
+      - run:
+          name: Download Dependencies
+          command: ./gradlew androidDependencies
+      - save_cache:
+          paths:
+            - ~/.gradle
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+      - run:
+          name: Run Tests
+          command: ./gradlew lint test
+      - store_artifacts:
+          path: app/build/reports
+          destination: reports
+      - store_test_results:
+          path: app/build/test-results
