--- a/feature-onboarding-ui/build.gradle
+++ b/feature-onboarding-ui/build.gradle
@@ -38,6 +38,10 @@ dependencies {
     
     implementation 'ru.terrakok.cicerone:cicerone:5.0.0'
 
+    implementation "org.koin:koin-android:2.1.5"
+    implementation "org.koin:koin-androidx-scope:2.1.5"
+    implementation "org.koin:koin-androidx-viewmodel:2.1.5"
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
