--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,12 @@ android {
     }
 
     buildTypes {
+        debug {
+            buildConfigField "String", "DATABASE_FILE_NAME", "\"DebugDatabase\""
+        }
         release {
+            buildConfigField "String", "DATABASE_FILE_NAME", "\"ApplicationDatabase\""
+
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -45,7 +50,7 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0'
+    implementation 'androidx.core:core-ktx:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     implementation 'ru.terrakok.cicerone:cicerone:5.0.0'
