--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation project(":repositories")
     implementation project(":core")
     implementation project(":core-ui")
+    implementation project(":feature-home")
     implementation project(":feature-home-ui")
     implementation project(":feature-onboarding-ui")
 
