--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,39 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
     }
 }
+
+ext {
+    compileSdkVersion = 30
+    targetSdkVersion = 30
+    minSdkVersion = 21
+    buildToolsVersion = "30.0.1"
+    versionCode = 1
+    versionName = "1.0"
+}
+
+ext.libraries = [
+        "core"              : "1.3.1",
+        "appcompat"         : "1.1.0",
+        "material"          : "1.3.0-alpha02",
+
+        "recyclerview"      : "1.1.0",
+        "constraintlayout"  : "1.1.3",
+
+        "cicerone"          : "5.0.0",
+
+        "coroutines"        : "1.3.5",
+        "viewmodel_ktx"     : "2.3.0-alpha06",
+
+        "koin"              : "2.1.5",
+
+        "room"              : "2.2.5",
+
+        "junit"             : "4.13",
+        "junit_android"     : "1.1.1",
+        "expresso"          : "3.2.0"
+]
 
 task clean(type: Delete) {
     delete rootProject.buildDir
