--- a/feature-onboarding/build.gradle
+++ b/feature-onboarding/build.gradle
@@ -3,6 +3,15 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
+    signingConfigs {
+        release {
+            storeFile file('/Users/vitaly/Untitled')
+            storePassword '350500'
+            keyAlias 'key0'
+            keyPassword '350500'
+        }
+    }
+
     compileSdkVersion rootProject.ext.compileSdkVersion
     buildToolsVersion rootProject.ext.buildToolsVersion
 
