start settings fragment and fix search

--- a/feature-home-ui/build.gradle
+++ b/feature-home-ui/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     implementation "org.koin:koin-android:${rootProject.ext.libraries.koin}"
     implementation "org.koin:koin-androidx-scope:${rootProject.ext.libraries.koin}"
     implementation "org.koin:koin-androidx-viewmodel:${rootProject.ext.libraries.koin}"
+    implementation 'androidx.preference:preference:1.1.0'
 
     testImplementation "junit:junit:${rootProject.ext.libraries.junit}"
     androidTestImplementation "androidx.test.ext:junit:${rootProject.ext.libraries.junit_android}"
