--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ ext.libraries = [
 
         "recyclerview"      : "1.1.0",
         "constraintlayout"  : "1.1.3",
+        "preferences"       : "1.1.1",
 
         "cicerone"          : "5.0.0",
 
