--- a/feature-alarm-ui/build.gradle
+++ b/feature-alarm-ui/build.gradle
@@ -22,12 +22,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
 }
 
@@ -36,7 +41,6 @@ dependencies {
     
     implementation project(":core")
     implementation project(":core-ui")
-    implementation project(":feature-home")
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "androidx.core:core-ktx:${rootProject.ext.libraries.core}"
@@ -47,6 +51,10 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:${rootProject.ext.libraries.recyclerview}"
 
     implementation "ru.terrakok.cicerone:cicerone:${rootProject.ext.libraries.cicerone}"
+
+    implementation "org.koin:koin-android:${rootProject.ext.libraries.koin}"
+    implementation "org.koin:koin-androidx-scope:${rootProject.ext.libraries.koin}"
+    implementation "org.koin:koin-androidx-viewmodel:${rootProject.ext.libraries.koin}"
 
     testImplementation "junit:junit:${rootProject.ext.libraries.junit}"
     androidTestImplementation "androidx.test.ext:junit:${rootProject.ext.libraries.junit_android}"
