--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,15 +16,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:name=".Application">
-        <activity android:name="com.booleanull.pushalerts.MainActivity"
-            android:launchMode="singleTop">
+        <activity
+            android:name="com.booleanull.pushalerts.MainActivity"
+            android:launchMode="singleTop"
+            android:showOnLockScreen="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <service android:name="com.booleanull.pushalerts.NotificationListenerService"
+        <service
+            android:name="com.booleanull.pushalerts.NotificationListenerService"
             android:foregroundServiceType="dataSync"
             android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
             <intent-filter>
