--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,7 @@ dependencies {
 
     implementation "androidx.room:room-ktx:${rootProject.ext.libraries.room}"
     implementation "androidx.room:room-runtime:${rootProject.ext.libraries.room}"
+    implementation 'com.google.firebase:firebase-analytics:17.2.2'
     kapt "androidx.room:room-compiler:${rootProject.ext.libraries.room}"
 
     testImplementation "junit:junit:${rootProject.ext.libraries.junit}"
