--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         </activity>
 
         <service
-            android:name="org.booleanull.pushalerts.NotificationListenerService"
+            android:name="org.booleanull.pushalerts.service.NotificationListenerService"
             android:foregroundServiceType="dataSync"
             android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
             <intent-filter>
