--- a/repositories/build.gradle
+++ b/repositories/build.gradle
@@ -41,7 +41,12 @@ dependencies {
     implementation "androidx.room:room-runtime:${rootProject.ext.libraries.room}"
     kapt "androidx.room:room-compiler:${rootProject.ext.libraries.room}"
 
+    testImplementation project(":mock-factory")
     testImplementation "junit:junit:${rootProject.ext.libraries.junit}"
+    testImplementation "org.mockito:mockito-core:4.0.0"
+    testImplementation "org.mockito.kotlin:mockito-kotlin:4.0.0"
+    //testImplementation 'org.robolectric:robolectric:4.8'
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1"
     androidTestImplementation "androidx.test.ext:junit:${rootProject.ext.libraries.junit_android}"
     androidTestImplementation "androidx.test.espresso:espresso-core:${rootProject.ext.libraries.expresso}"
 }
