--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
 
     <application
         android:name=".Application"
+        android:exported="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -19,6 +20,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name="org.booleanull.pushalerts.MainActivity"
+            android:exported="true"
             android:launchMode="singleTop"
             android:showOnLockScreen="true">
             <intent-filter>
@@ -29,6 +31,7 @@
 
         <service
             android:name="org.booleanull.pushalerts.NotificationListenerService"
+            android:exported="true"
             android:foregroundServiceType="dataSync"
             android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
             <intent-filter>
