--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.3.72'
+    ext.kotlin_version = '1.6.0'
     repositories {
         google()
         jcenter()
@@ -44,11 +44,12 @@ ext.libraries = [
         "coroutines"        : "1.3.5",
         "viewmodel_ktx"     : "2.3.0-alpha06",
 
-        "koin"              : "2.1.5",
+        "koin"              : "2.2.0-alpha-1",
 
-        "room"              : "2.2.5",
+        "room"              : "2.4.0-alpha03",
 
         "junit"             : "4.13",
+        "mockk"             : "1.12.4",
         "junit_android"     : "1.1.1",
         "expresso"          : "3.2.0"
 ]
