--- a/feature-alarm-ui/build.gradle
+++ b/feature-alarm-ui/build.gradle
@@ -34,6 +34,10 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
+
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 dependencies {
@@ -56,7 +60,18 @@ dependencies {
     implementation "org.koin:koin-androidx-scope:${rootProject.ext.libraries.koin}"
     implementation "org.koin:koin-androidx-viewmodel:${rootProject.ext.libraries.koin}"
 
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${rootProject.ext.libraries.coroutines}"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:${rootProject.ext.libraries.coroutines}"
+
+    testImplementation project(":mock-factory")
     testImplementation "junit:junit:${rootProject.ext.libraries.junit}"
+    testImplementation "org.mockito:mockito-core:4.0.0"
+    testImplementation 'org.mockito:mockito-inline:2.13.0'
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "org.mockito.kotlin:mockito-kotlin:4.0.0"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${rootProject.ext.libraries.coroutines}"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:${rootProject.ext.libraries.coroutines}"
     androidTestImplementation "androidx.test.ext:junit:${rootProject.ext.libraries.junit_android}"
     androidTestImplementation "androidx.test.espresso:espresso-core:${rootProject.ext.libraries.expresso}"
 }
