--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
+rootProject.name='PushAlerts'
 include ':feature-alarm'
 include ':feature-alarm-ui'
 include ':database'
-rootProject.name='PushAlerts'
 include ':repositories'
 include ':feature-onboarding-ui'
 include ':feature-onboarding'
@@ -10,3 +10,4 @@ include ':core-ui'
 include ':feature-home'
 include ':feature-home-ui'
 include ':core'
+include ':mock-factory'
